Add mirror for packwiz artifact
Always fun when packwiz artifact expires!